<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5">

        <TextView
            android:id="@+id/inputTextView"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="#FFFFFF"
            android:gravity="right|center_vertical"
            android:paddingHorizontal="16dp"
            android:text="@string/_0_0"
            android:textSize="24sp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:background="#DDDDDD"
            android:padding="0dp"
            android:text="@string/_7"
            android:textColor="#000000"
            app:layout_constraintEnd_toStartOf="@id/btn8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputTextView" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="#DDDDDD"
            android:padding="0dp"
            android:text="@string/_8"
            android:textColor="#000000"
            app:layout_constraintEnd_toStartOf="@id/btn9"
            app:layout_constraintStart_toEndOf="@id/btn7"
            app:layout_constraintTop_toBottomOf="@id/inputTextView" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="#DDDDDD"
            android:padding="0dp"
            android:text="@string/_9"
            android:textColor="#000000"
            app:layout_constraintEnd_toStartOf="@id/btnAdd"
            app:layout_constraintStart_toEndOf="@id/btn8"
            app:layout_constraintTop_toBottomOf="@id/inputTextView" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="#DDDDDD"
            android:padding="0dp"
            android:text="@string/add"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn9"
            app:layout_constraintTop_toBottomOf="@id/inputTextView" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:background="#DDDDDD"
            android:padding="0dp"
            android:text="@string/_4"
            android:textColor="#000000"
            app:layout_constraintEnd_toStartOf="@id/btn5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn7" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="#DDDDDD"
            android:padding="0dp"
            android:text="@string/_5"
            android:textColor="#000000"
            app:layout_constraintEnd_toStartOf="@id/btn6"
            app:layout_constraintStart_toEndOf="@id/btn4"
            app:layout_constraintTop_toBottomOf="@id/btn7" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="#DDDDDD"
            android:padding="0dp"
            android:text="@string/_6"
            android:textColor="#000000"
            app:layout_constraintEnd_toStartOf="@id/btnMultiply"
            app:layout_constraintStart_toEndOf="@id/btn5"
            app:layout_constraintTop_toBottomOf="@id/btn7" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:background="#DDDDDD"
            android:padding="0dp"
            android:text="@string/mul"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn6"
            app:layout_constraintTop_toBottomOf="@id/btn7" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:background="#DDDDDD"
            android:padding="0dp"
            android:text="@string/_1"
            android:textColor="#000000"
            app:layout_constraintEnd_toStartOf="@id/btn2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn4" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="#DDDDDD"
            android:padding="0dp"
            android:text="@string/_2"
            android:textColor="#000000"
            app:layout_constraintEnd_toStartOf="@id/btn3"
            app:layout_constraintStart_toEndOf="@id/btn1"
            app:layout_constraintTop_toBottomOf="@id/btn4" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="#DDDDDD"
            android:padding="0dp"
            android:text="@string/_3"
            android:textColor="#000000"
            app:layout_constraintEnd_toStartOf="@id/btnMinus"
            app:layout_constraintStart_toEndOf="@id/btn2"
            app:layout_constraintTop_toBottomOf="@id/btn4" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:background="#DDDDDD"
            android:padding="0dp"
            android:text="@string/jian"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn3"
            app:layout_constraintTop_toBottomOf="@id/btn4" />

        <Button
            android:id="@+id/btnNegate"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:background="#DDDDDD"
            android:padding="0dp"
            android:text="@string/ad"
            android:textColor="#000000"
            app:layout_constraintEnd_toStartOf="@id/btn0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn1" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="#DDDDDD"
            android:padding="0dp"
            android:text="@string/_0"
            android:textColor="#000000"
            app:layout_constraintEnd_toStartOf="@id/btnEqual"
            app:layout_constraintStart_toEndOf="@id/btnNegate"
            app:layout_constraintTop_toBottomOf="@id/btn1" />

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="#DDDDDD"
            android:padding="0dp"
            android:text="@string/equal"
            android:textColor="#000000"
            app:layout_constraintEnd_toStartOf="@id/btnDot"
            app:layout_constraintStart_toEndOf="@id/btn0"
            app:layout_constraintTop_toBottomOf="@id/btn1" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:background="#DDDDDD"
            android:padding="0dp"
            android:text="@string/point"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnEqual"
            app:layout_constraintTop_toBottomOf="@id/btn1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
